# named-env

./: README.md  pyproject.toml  tox.ini
src/named_env/: __init__.py  environment.py  exceptions.py  namespace.py  variables.py
tests/: cases.py  test_env.py
