[tool.poetry]
name = "named-env"
version = "2.1.0"
description = "Class-based environment variables typed specification"
license = "MIT"
authors = [
    "Artem Novikov <artnew@list.ru>",
]
readme = "README.md"
repository = "https://github.com/reartnew/named-env"
classifiers = [
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
pytest-pylint = "*"
pylint-quotes = "*"
pytest-mypy = "*"
pytest-black = "*"
pytest-bandit = "*"
tox-poetry = "*"

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]
addopts = """
--pylint
--mypy
--black
--bandit
"""
bandit_targets = ["src"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
