[tool.poetry]
name = "named-env"
version = "2.4.0"
description = "Class-based environment variables typed specification"
license = "MIT"
authors = [
    "Artem Novikov <artnew@list.ru>",
]
readme = "README.md"
repository = "https://github.com/reartnew/named-env"
classifiers = [
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
# Tests dependencies
pytest = {version = "^8.3.4", optional = true }
pytest-pylint = {version = "^0.21.0", optional = true }
pytest-mypy = {version = "^0.10.1", optional = true }
pytest-black = {version = "^0.6.0", optional = true }
pytest-bandit = {version = "^0.6.1", optional = true }
pylint = { version = "^3.3.3", optional = true }

[tool.poetry.extras]
tests = [
    "pytest",
    "pytest-pylint",
    "pytest-mypy",
    "pytest-black",
    "pytest-bandit",
    "pylint",
]

[tool.poetry.group.dev.dependencies]
tox = "^4.23.2"
setuptools = "^75.7.0"

[tool.tox]
envlist = ["py39", "py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
extras = ["tests"]
commands = [["pytest"]]

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]
addopts = """
--pylint
--mypy
--black
--bandit
"""
bandit_targets = ["src"]
filterwarnings = [
    "error",
    "ignore:.*:pytest.PytestWarning",
    "ignore:.*:builtins.DeprecationWarning",
]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
fail-under = 10.0
jobs = 1
unsafe-load-any-extension = "no"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "broad-except",
    "fixme",
]
enable = ["unused-wildcard-import"]

[tool.pylint.REFACTORING]
max-nested-blocks = 10
never-returning-functions = ["sys.exit"]

[tool.pylint.BASIC]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
bad-names = ["l"]
class-attribute-naming-style = "any"
class-naming-style = "any"
class-rgx = "[A-Z][a-zA-Z]*$"
const-naming-style = "UPPER_CASE"
docstring-min-length = -1
function-naming-style = "snake_case"
good-names-rgxs = "^[a-z_]$"
include-naming-hint = "no"
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
no-docstring-rgx = "^_"
property-classes = ["abc.abstractproperty"]
variable-naming-style = "snake_case"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"
indent-after-paren = 4
indent-string = "'    '"
max-line-length = 120
max-module-lines = 1000
single-line-class-stmt = "no"
single-line-if-stmt = "no"

[tool.pylint.MISCELLANEOUS]
notes = "TODO"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "no"
min-similarity-lines = 50

[tool.pylint.SPELLING]
max-spelling-suggestions = 4
spelling-store-unknown-words = "no"

[tool.pylint.STRING]
check-quote-consistency = "no"
check-str-concat-over-line-jumps = "no"

[tool.pylint.TYPECHECK]
contextmanager-decorators = ["contextlib.contextmanager"]
ignore-mixin-members = "yes"
ignore-none = "no"
ignore-on-opaque-inference = "yes"
ignored-classes = [
    "optparse.Values",
    "thread._local",
    "_thread._local",
]
missing-member-hint = "yes"
missing-member-hint-distance = 1
missing-member-max-choices = 1

[tool.pylint.VARIABLES]
allow-global-unused-variables = "yes"
callbacks = [
    "cb_",
    "_cb",
]
dummy-variables-rgx = "^_$"
ignored-argument-names = "_.*|^ignored_|^unused_"
init-import = "no"
redefining-builtins-modules = [
    "six.moves",
    "past.builtins",
    "future.builtins",
    "builtins",
    "io",
]

[tool.pylint.CLASSES]
defining-attr-methods = [
    "__init__",
    "__new__",
    "__post_init__",
]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "cls"

[tool.pylint.DESIGN]
max-args = 20
max-attributes = 50
max-bool-expr = 10
max-branches = 50
max-locals = 50
max-parents = 20
max-public-methods = 100
max-returns = 10
max-statements = 100
min-public-methods = 2

[tool.pylint.IMPORTS]
allow-wildcard-with-all = "no"
analyse-fallback-blocks = "yes"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
]
